<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="de.thaler.baggup.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_mime"
        android:name="de.thaler.baggup.ui.MimeFragment"
        android:label="@string/menu_mime" />

    <fragment
        android:id="@+id/nav_folder"
        android:name="de.thaler.baggup.ui.FolderFragment"
        android:label="@string/menu_settings" />
</navigation>