<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_arrow_circle_right_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_folder"
            android:icon="@drawable/baseline_arrow_circle_right_24"
            android:title="@string/menu_folder" />
        <item
            android:id="@+id/nav_mime"
            android:icon="@drawable/baseline_arrow_circle_right_24"
            android:title="@string/menu_mime" />
    </group>
</menu>