<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2024 Mathias Uebel
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_help"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="42sp"
    android:paddingTop="12sp">

    <Button
        android:id="@+id/buttonCloseX"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:text="@string/x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/placeholder"
        android:textSize="22sp"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/dialog_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:padding="0sp"
        android:text="@string/placeholder"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_title"
        tools:visibility="visible" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12sp"
        android:layout_marginTop="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_text">

        <TextView
            android:id="@+id/textViewLogin"
            style="@style/dialog_textViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialogloginname"
            app:layout_column="0"
            app:layout_row="0" />

        <EditText
            android:id="@+id/editTextLogin"
            style="@style/dialog_textViews"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:ems="6"
            android:inputType="text"
            android:text="@string/placeholder"
            app:layout_column="1"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout"
            app:layout_row="0"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/textViewPassword1"
            style="@style/dialog_textViews"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/passworteingabe"
            app:layout_column="0"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout"
            app:layout_row="1" />

        <EditText
            android:id="@+id/editTextPassword1"
            style="@style/dialog_textViews"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:ems="6"
            android:inputType="textPassword"
            android:text="@string/placeholder"
            app:layout_column="1"
            app:layout_row="1"
            tools:ignore="LabelFor" />
        <TextView
            android:id="@+id/textViewPassword2"
            style="@style/dialog_textViews"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/repeat_passwort"
            app:layout_column="0"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout"
            app:layout_row="2" />
        <EditText
            android:id="@+id/editTextPassword2"
            style="@style/dialog_textViews"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:ems="6"
            android:inputType="textPassword"
            android:text="@string/placeholder"
            app:layout_column="1"
            app:layout_row="2"
            tools:ignore="LabelFor" />
        <TextView
            android:id="@+id/textViewPort"
            style="@style/dialog_textViews"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/port"
            app:layout_column="0"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout"
            app:layout_row="3" />
        <EditText
            android:id="@+id/editTextPort"
            style="@style/dialog_textViews"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:ems="6"
            android:inputType="number"
            android:text="@string/placeholder"
            app:layout_column="1"
            app:layout_row="3"
            tools:ignore="LabelFor" />
        <TextView
            android:id="@+id/textViewClearCache"
            style="@style/dialog_textViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialogTextClearCache"
            android:visibility="visible"
            app:layout_column="0"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout"
            app:layout_row="4" />
        <CheckBox
            android:id="@+id/checkbocClearCache"
            style="@style/dialog_textViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:visibility="visible"
            app:layout_column="1"
            app:layout_row="4"
            tools:ignore="LabelFor" />
    </androidx.gridlayout.widget.GridLayout>

    <Button
        android:id="@+id/buttonSavePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/save"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>