<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Baggup.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:popupTheme="@style/Theme.Baggup.PopupOverlay"
            app:titleTextColor="?android:textColorPrimary" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="2sp">
            <TableRow tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/imageView_serverSVG"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12sp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/baseline_browser_not_supported_24" />

                <TableLayout>
                    <TableRow>
                        <TextView
                            android:layout_column="2"
                            android:id="@+id/customProgressInfo1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="16sp"
                            android:text="@string/customProgress_DataSize" />
                    </TableRow>
                    <TableRow>
                        <TextView
                        android:layout_column="2"
                        android:id="@+id/customProgressTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/customProgress_noDataTransfer" />
                    </TableRow>
                    <TableRow>
                        <ProgressBar
                            android:layout_column="1"
                            android:layout_span="2"
                            android:id="@+id/customProgressProgressBar"
                            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/black_10"
                            android:indeterminate="false"
                            android:indeterminateTintMode="src_over"
                            android:max="100"
                            android:progress="0"
                            android:progressBackgroundTint="@color/black_10" />
                    </TableRow>
                </TableLayout>

            </TableRow>
        </TableLayout>
    </com.google.android.material.appbar.AppBarLayout>

  <include layout="@layout/content_main"/>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/fab"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom|end"
      android:layout_marginEnd="@dimen/fab_margin"
      android:layout_marginBottom="16dp"
      android:contentDescription="@string/placeholder"
      android:backgroundTint="?colorOnPrimary"
      app:srcCompat="@drawable/baseline_cached_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>