<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimaryVariant"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/home_fragment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="@dimen/fragment_title_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/home_fragment_ip_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="42sp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="42sp"
        android:text="@string/placeholder"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_fragment_title" />

    <TextView
        android:id="@+id/home_fragment_ip_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="42sp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="42sp"
        android:text="@string/unassigned"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_fragment_ip_name" />

    <TextView
        android:id="@+id/home_fragment_description1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="42sp"
        android:layout_marginTop="22sp"
        android:layout_marginRight="42sp"
        android:text="@string/placeholder"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_fragment_ip_number" />
<!--
    <TextView
        android:id="@+id/home_fragment_description2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="42sp"
        android:layout_marginTop="22sp"
        android:layout_marginRight="42sp"
        android:text="@string/nothing_selected"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_fragment_description1" />

    <TextView
        android:id="@+id/home_fragment_description3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="42sp"
        android:layout_marginTop="22sp"
        android:layout_marginRight="42sp"
        android:text="@string/nothing_selected"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_fragment_description2" />

-->

</androidx.constraintlayout.widget.ConstraintLayout>